--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
 /* #region | Root, general styling */
 :root {
+	--font_size_s: 12px;
+	--font_size_m: 17px;
+	--font_size_l: 20px;
+	--font_size_xl: 24px;
 	--spacing_s: 6px;
 	--spacing_m: 10px;
 	--spacing_l: 16px;
+	--border_radius: 6px;
+	--border_width: 2px;
 
-	--elev_0: hsl(230, 15%, 15%);
-	--elev_1: hsl(230, 15%, 25%);
-	--color_primary: hsl(0, 0%, 70%);
+	--elev_0: hsl(230, 11%, 14%);
+	--elev_1: hsl(230, 13%, 23%);
+	--elev_2: hsl(230, 10%, 39%);
+	--accent: hsl(215, 50%, 43%);
+	--color_primary: hsl(0, 0%, 75%);
+	--color_secondary: hsl(0, 0%, 45%);
 }
 
 * {
@@ -15,6 +24,7 @@
 	box-sizing: border-box;
 	color: var(--color_primary);
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: var(--font_size_m);
 }
 
 body {
@@ -23,11 +33,39 @@ body {
 	overflow: hidden;
 	background-color: var(--elev_0);
 }
+
+h1 { font-size: var(--font_size_xl); }
+h2 { font-size: var(--font_size_l); }
+
+hr {
+	border: none;
+	width: 100%;
+	height: var(--border_width);
+	background-color: var(--elev_2);
+	margin: var(--spacing_m) 0;
+}
+
+input[type="text"] {
+	outline: none;
+	padding: var(--spacing_s);
+	border: var(--border_width) solid var(--elev_2);
+	border-radius: var(--border_radius);
+	background-color: var(--elev_0);
+}
+
+input[type="text"]:focus {
+	border: var(--border_width) solid var(--accent);
+}
 /* #endregion */
 
 
 /* #region | Shared classes */
 .hidden_if_landscape { display: none; }
+
+.subtext {
+	color: var(--color_secondary);
+	font-size: var(--font_size_s);
+}
 /* #endregion */
 
 
@@ -44,10 +82,12 @@ body > div {
 
 /* Header shown in portrait only mode */
 #portrait_header_container {
-	margin: 0;
+	margin: 0 0 var(--spacing_l);
+	padding: var(--spacing_l);
+	z-index: 100;
+	border-radius: var(--border_radius);
 	box-shadow: 0 0 var(--spacing_l) black;
 	background-color: var(--elev_1);
-	z-index: 100;
 }
 
 /* Sidebar and content */
@@ -58,9 +98,14 @@ body > div {
 
 /* Left sidebar */
 #sidebar_container {
+	display: flex;
+	flex-direction: column;
 	width: 350px;
 	margin: var(--spacing_l) var(--spacing_l) var(--spacing_l) 0;
+	padding: var(--spacing_l);
 	z-index: 50;
+	overflow: hidden auto;
+	border-radius: var(--border_radius);
 	background-color: var(--elev_1);
 }
 
@@ -68,7 +113,23 @@ body > div {
 #pages_container {
 	flex-grow: 1;
 	margin: var(--spacing_l) 0;
+	padding: var(--spacing_l);
+	overflow: hidden auto;
+	border-radius: var(--border_radius);
 	background-color: var(--elev_1);
+}
+/* #endregion */
+
+
+/* #region | Sidebar */
+#sidebar_container > *:not(:last-child) {
+	margin-bottom: var(--spacing_m);
+}
+
+#games_list {
+	padding: var(--spacing_s);
+	border-radius: var(--border_radius);
+	background-color: var(--elev_0);
 }
 /* #endregion */
 
