--- a/style.css
+++ b/style.css
@@ -121,6 +121,30 @@ body > div {
 /* #endregion */
 
 
+/* #region | Portrait header */
+#portrait_header {
+	display: flex;
+	align-items: center;
+}
+
+#sidebar_toggle {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	flex-shrink: 0;
+	width: 40px;
+	height: 40px;
+	margin-right: var(--spacing_l);
+	cursor: pointer;
+}
+
+#sidebar_toggle > div {
+	background-color: var(--color_primary);
+	height: 20%;
+}
+/* #endregion */
+
+
 /* #region | Sidebar */
 #sidebar_container > *:not(:last-child) {
 	margin-bottom: var(--spacing_m);
