--- a/style.css
+++ b/style.css
@@ -2,20 +2,28 @@
 :root {
 	--font_size_s: 14px;
 	--font_size_m: 18px;
-	--font_size_l: 24px;
+	--font_size_l: 20px;
 	--font_size_xl: 28px;
+
 	--spacing_s: 6px;
 	--spacing_m: 10px;
 	--spacing_l: 16px;
+
+	--range_thumb_w: 20px;
+	--range_thumb_h: 30px;
+	--range_track_h: 16px;
+
 	--border_radius: 6px;
 	--border_width: 2px;
+	--border_color: hsl(230, 10%, 37%);
 
 	--elev_0: hsl(230, 11%, 14%);
 	--elev_1: hsl(230, 13%, 23%);
-	--elev_2: hsl(230, 10%, 37%);
+	--elev_2: hsl(230, 10%, 28%);
 	--accent: hsl(215, 50%, 43%);
+
 	--color_primary: hsl(0, 0%, 75%);
-	--color_secondary: hsl(0, 0%, 45%);
+	--color_secondary: hsl(0, 0%, 50%);
 }
 
 * {
@@ -42,24 +50,49 @@ hr {
 	border: none;
 	width: 100%;
 	height: var(--border_width);
-	background-color: var(--elev_2);
+	background-color: var(--border_color);
 	margin: var(--spacing_m) 0;
 }
 
 input[type="text"] {
 	outline: none;
 	padding: var(--spacing_s);
-	border: var(--border_width) solid var(--elev_2);
+	border: var(--border_width) solid var(--border_color);
 	border-radius: var(--border_radius);
 	background-color: var(--elev_0);
 }
 
 input[type="text"]:focus { border: var(--border_width) solid var(--accent); }
 
-table { border-collapse: collapse; }
-table tr:not(:last-child) { border-bottom: var(--border_width) solid var(--elev_2); }
-table td:first-child { border-right: var(--border_width) solid var(--elev_2); }
-table td { padding: var(--spacing_s); }
+/* Range inputs */
+input[type="range"] {
+	appearance: none;
+	-webkit-appearance: none;
+	height: var(--range_track_h);
+	outline: none;
+	border-radius: var(--border_radius);
+	background-color: var(--elev_0);
+}
+
+input[type="range"]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+	appearance: none;
+	width: var(--range_thumb_w);
+	height: var(--range_thumb_h);
+	background-color: var(--accent);
+	border-radius: var(--border_radius);
+	outline: none;
+	border: none;
+}
+
+input[type="range"]::-moz-range-thumb {
+	width: var(--range_thumb_w);
+	height: var(--range_thumb_h);
+	background-color: var(--accent);
+	border-radius: var(--border_radius);
+	outline: none;
+	border: none;
+}
 /* #endregion */
 
 
@@ -81,6 +114,15 @@ table td { padding: var(--spacing_s); }
 
 .hidden { display: none !important; }
 
+.button_container {
+	display: flex;
+	flex-direction: column;
+	gap: var(--spacing_s);
+	border-radius: var(--border_radius);
+	border: var(--spacing_s) solid var(--elev_0);
+	background-color: var(--elev_0);
+}
+
 .button {
 	background-color: var(--elev_1);
 	padding: var(--spacing_s);
@@ -95,6 +137,13 @@ table td { padding: var(--spacing_s); }
 }
 
 .button:hover { background-color: var(--elev_2); }
+
+.button.active { box-shadow: inset 0 0 0 var(--border_width) var(--accent); }
+
+table.data_table { border-collapse: collapse; }
+table.data_table tr:not(:last-child) { border-bottom: var(--border_width) solid var(--border_color); }
+table.data_table td:first-child { border-right: var(--border_width) solid var(--border_color); }
+table.data_table td { padding: var(--spacing_s); }
 /* #endregion */
 
 
@@ -179,14 +228,71 @@ body > div {
 #sidebar_container > *:not(:last-child) { margin-bottom: var(--spacing_m); }
 
 #games_list {
-	display: flex;
+	flex-direction: initial;
 	flex-wrap: wrap;
+	flex-shrink: 0;
 	max-height: 180px;
-	gap: var(--spacing_s);
 	overflow: hidden auto;
+}
+/* #endregion */
+
+
+/* #region | Pages */
+#game_page table { width: 100%; }
+
+.comparison_container > * { margin-bottom: var(--spacing_l); }
+.comparison_container .slider {
+	width: 100%;
+}
+
+.images_container {
+	display: grid;
+	grid-template-areas: "img_left";
+	position: relative;
+}
+
+.images_container img {
+	grid-area: img_left;
+	width: 100%;
+	height: auto;
+}
+
+.img_left {
+	z-index: 150;
+	mask-image: linear-gradient(to right, #000000 var(--cut), rgba(0,0,0,0) var(--cut));
+}
+
+.img_right { z-index: 100; }
+
+.options_container {
+	display: flex;
+	justify-content: space-around;
+	padding: var(--spacing_s);
 	border-radius: var(--border_radius);
-	border: var(--spacing_s) solid var(--elev_0);
 	background-color: var(--elev_0);
+}
+
+.fps_container {
+	padding: var(--spacing_s);
+	width: 100%;
+	border-radius: var(--border_radius);
+	background-color: var(--elev_0);
+}
+
+.fps_container td:first-child {
+	width: 1% !important;
+	white-space: nowrap;
+	padding-right: var(--spacing_s);
+}
+
+.fps_bar {
+	background-color: var(--accent);
+	height: 5px;
+	width: 100%;
+}
+
+#control_container {
+	opacity: 0%;
 }
 /* #endregion */
 
